vest-dsl/test/bad/choice_arrays_variant_invalid_len2.vest
array = [u8; 4]
fmt(@len: u8, @tag: array) = choose(@tag) {
  "abcd" => [u8; @len],
  "efgh" => u32,
  "ijklm" => u32,
}
